[package]
name = "rust-maple"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
memmap2 = "0.9"
wz_reader = { path = "./wz_temp", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard = "0.5"
futures = "0.3"

# GUI viewer dependencies
eframe = "0.27"
egui = "0.27"
rfd = "0.14"

[[bin]]
name = "wz-viewer"
path = "src/viewer.rs"

[[bin]]
name = "test-logo"
path = "src/test_logo.rs"
