[package]
name = "rust-maple"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
memmap2 = "0.9"
wz_reader = { path = "./wz_temp", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard = "0.5"
futures = "0.3"

# GUI viewer dependencies (native only, not for WASM)
eframe = { version = "0.27", default-features = false, features = ["default", "glow"] }
egui = "0.27"
rfd = "0.14"

[build]
rustflags = ["-A non_snake_case"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.21"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "HtmlAnchorElement"] }

[[bin]]
name = "wz-viewer"
path = "src/viewer.rs"

[[bin]]
name = "test-logo"
path = "src/test_logo.rs"
